--- a/src/main/webapp/channel/person_institution.xhtml
+++ b/src/main/webapp/channel/person_institution.xhtml
@@ -6,9 +6,9 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:au="http://java.sun.com/jsf/composite/autocomplete"
                 
-                template="/resources/template/template.xhtml">
+                template="/admin_manage_staff_index.xhtml">
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:form>
             <p:panel header="Manage Person Institutions(Channeling)" >
                 <p:panel>
