--- a/src/main/webapp/admin_doctor_consultant.xhtml
+++ b/src/main/webapp/admin_doctor_consultant.xhtml
@@ -1,14 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/admin_manage_staff_index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
 
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
 
         <h:panelGroup >
             <h:form  >
@@ -34,10 +34,10 @@
                                         <f:ajax execute="@this" render="lstSelect" event="keyup" />
                                     </p:inputText>
 
-                                    <h:selectOneListbox  id="lstSelect"   size="10" value="#{consultantController.current}" style="min-width: 223px;">
+                                    <p:selectOneListbox  id="lstSelect"  class="w-100" scrollHeight="500" value="#{consultantController.current}" style="min-width: 400px;">
                                         <f:selectItems  value="#{consultantController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.person.nameWithTitle}"  ></f:selectItems>
                                         <f:ajax render="gpDetail" execute="lstSelect" />                                        
-                                    </h:selectOneListbox>
+                                    </p:selectOneListbox>
 
                                 </h:panelGrid>
                                 <h:panelGrid id="gpSelectButtons" columns="3"  >
@@ -53,7 +53,7 @@
                             <p:commandLink value="Consultant List" action="admin_doctor_consultant_1" ajax="false" />
                         </h:panelGrid  >
 
-                        <p:panel>
+                        <p:panel style="min-height: 600px">
                             <h:panelGrid id="gpDetail" columns="1">
 
 
@@ -61,37 +61,37 @@
                                     <p:tab title="Basic Details" >
                                         <h:panelGrid columns="2">
                                             <h:outputText  value="Title" />
-                                            <p:selectOneMenu  id="cmbTitle"  
+                                            <p:selectOneMenu  id="cmbTitle"  style="min-width: 400px;"
                                                               value="#{consultantController.current.person.title}"  >
                                                 <f:selectItem itemLabel="Select Title" />
                                                 <f:selectItems value="#{enumController.titleDoctor}" var="i" 
                                                                itemLabel="#{i.label}" itemValue="#{i}"/>
                                             </p:selectOneMenu>
                                             <h:outputText  value="Name" />
-                                            <p:inputText autocomplete="off" value="#{consultantController.current.person.name}"  />
+                                            <p:inputText autocomplete="off" value="#{consultantController.current.person.name}"  style="min-width: 400px;"/>
                                             <h:outputText  value="Code" />
-                                            <p:inputText autocomplete="off" value="#{consultantController.current.code}"  />
+                                            <p:inputText autocomplete="off" value="#{consultantController.current.code}"  style="min-width: 400px;"/>
                                             <h:outputText  value="*Consultant Serial No" />
-                                            <p:inputText autocomplete="off" value="#{consultantController.current.codeInterger}"  />
+                                            <p:inputText autocomplete="off" value="#{consultantController.current.codeInterger}" style="min-width: 400px;" />
                                             <h:outputText  value="Phone" />
-                                            <p:inputText  value="#{consultantController.current.person.phone}"  />
+                                            <p:inputText  value="#{consultantController.current.person.phone}" style="min-width: 400px;" />
                                             <h:outputText  value="Fax" />
-                                            <p:inputText autocomplete="off"  value="#{consultantController.current.person.fax}"  />
+                                            <p:inputText autocomplete="off"  value="#{consultantController.current.person.fax}" style="min-width: 400px;" />
                                             <h:outputText  value="Mobile" />
-                                            <p:inputText autocomplete="off" value="#{consultantController.current.person.mobile}"  />
+                                            <p:inputText autocomplete="off" value="#{consultantController.current.person.mobile}"  style="min-width: 400px;"/>
                                             <h:outputText  value="Address" />
-                                            <p:inputText autocomplete="off" value="#{consultantController.current.person.address}"  />
+                                            <p:inputText autocomplete="off" value="#{consultantController.current.person.address}"  style="min-width: 400px;"/>
                                             <h:outputText value="Speciality" />
-                                            <p:selectOneMenu value="#{consultantController.current.speciality}" >
+                                            <p:selectOneMenu value="#{consultantController.current.speciality}" style="min-width: 400px;">
                                                 <f:selectItem itemLabel="Please select a speciality"/>
                                                 <f:selectItems value="#{doctorSpecialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                             </p:selectOneMenu>
                                             <h:outputText value="Registration" />
-                                            <p:inputText autocomplete="off" value="#{consultantController.current.registration}" />
+                                            <p:inputText autocomplete="off" value="#{consultantController.current.registration}" style="min-width: 400px;"/>
                                             <h:outputText value="Qualification" />
-                                            <p:inputText autocomplete="off"  value="#{consultantController.current.qualification}" />
+                                            <p:inputText autocomplete="off"  value="#{consultantController.current.qualification}" style="min-width: 400px;"/>
                                             <h:outputText  value="Refering Charge" />
-                                            <p:inputText autocomplete="off"  value="#{consultantController.current.charge}"  />
+                                            <p:inputText autocomplete="off"  value="#{consultantController.current.charge}"  style="min-width: 400px;"/>
 
 
 
