--- a/src/main/webapp/admin_staff_signature.xhtml
+++ b/src/main/webapp/admin_staff_signature.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/admin_manage_staff_index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
                 <p:panel  >
 
