--- a/src/main/webapp/admin_staff_view_signature.xhtml
+++ b/src/main/webapp/admin_staff_view_signature.xhtml
@@ -10,8 +10,8 @@
 
         <h:outputStylesheet library="css" name="maincss.css" />
 
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/admin_manage_staff_index.xhtml">
+            <ui:define name="subcontent">
                 <h:form  >
                     <p:panel id="printer1" header="View Staff Signature" >
                         <p:dataTable value="#{staffController.items}" var="s" 
