--- a/src/main/webapp/membership/membership_scheme.xhtml
+++ b/src/main/webapp/membership/membership_scheme.xhtml
@@ -25,11 +25,11 @@
                         <h:panelGrid id="gpSelect" columns="1"  >
                             <p:panel >
                                 <h:panelGrid id="gpSelectText" >
-                                    <h:selectOneListbox  id="lstSelect"   size="10" value="#{membershipSchemeController.current}" style="min-width: 223px">
+                                    <p:selectOneListbox  id="lstSelect"  class="w-100" scrollHeight="500" value="#{membershipSchemeController.current}" style="min-width: 400px">
                                         <f:selectItems  value="#{membershipSchemeController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                         <f:ajax render="gpDetail" execute="lstSelect" >
                                         </f:ajax>
-                                    </h:selectOneListbox>
+                                    </p:selectOneListbox>
                                 </h:panelGrid>
                                 <h:panelGrid id="gpSelectButtons" columns="3"  >
                                     <p:commandButton  value="Fill" action="#{membershipSchemeController.fillItems()}" styleClass="buttons" >
@@ -48,15 +48,15 @@
                             </p:panel>
                         </h:panelGrid  >
 
-                        <p:panel>
+                        <p:panel style="width: 600px; height: 550px">
                             <h:panelGrid id="gpDetail" columns="1">
                                 <h:panelGrid id="gpDetailText" columns="2">
                                     <h:outputText value="Id" ></h:outputText>
                                     <h:outputText value="#{membershipSchemeController.current.id}" ></h:outputText>
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtName" value="#{membershipSchemeController.current.name}"  ></h:inputText>
+                                    <h:inputText autocomplete="off" id="txtName" value="#{membershipSchemeController.current.name}"  style="min-width: 450px"></h:inputText>
                                     <h:outputText id="lblCode" value="Code" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtCode" value="#{membershipSchemeController.current.code}"  ></h:inputText>
+                                    <h:inputText autocomplete="off" id="txtCode" value="#{membershipSchemeController.current.code}" style="min-width: 450px" ></h:inputText>
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
                                     <p:commandButton id="btnSave" value="Save" action="#{membershipSchemeController.saveSelected()}" styleClass="buttons" ajax="false">
